--- a/admin/css/changeset.css
+++ b/admin/css/changeset.css
@@ -66,9 +66,9 @@
 }
 
 #m-changesets h1 {
-	font-size: 11px !important;
+	font-size: 11px;
 	text-transform: uppercase !important;
-	font-weight: normal !important;
+	font-weight: normal;
 	padding: 5px 5px 4px 10px !important;
 	margin: 0 !important;
 	/*background-color: rgb(100,100,100);*/ /* fallback */
@@ -80,6 +80,7 @@
 	color: rgba(255,255,255,.8) !important;
 	text-shadow: rgba(0,0,0,.8) 0px -1px 0px !important;
 	height: 13px !important;
+	line-height: 13px;
 }
 
 #m-changesets #m-cs-utility {
